# distributed-process-zookeeper

./: .gitignore  LICENSE  README.md  distributed-process-zookeeper.cabal  stack.yaml
examples/: Boss.hs
src/Control/Distributed/Process/: Zookeeper.hs
src/Database/Zookeeper/: Lifted.hs
test/: Spec.hs
