name:                distributed-process-zookeeper
version:             0.0.0.1
synopsis:            A zookeeper back-end for Cloud Haskell. 
description:         Provides service and node discovery for Cloud Haskell applications using
                     a Zookeeper cluster for name registration, lookups and leader election. 
                     Uses the hzk bindings to the Zookeeper multi-threaded C library.
                     Objectives and features:
                         * Compatibile with distributed-process-p2p API - can work as a drop-in
                           replacement.
                         * No dependencies beyond those used by distributed-process and hzk.
                         * Automatic registration of local names (defined with 'register') by an MxAgent. 
                         * Global singleton processes with leader election and recovery.
homepage:            https://github.com/jeremyjh/distributed-process-zookeeper
license:             BSD3
license-file:        LICENSE
author:              Jeremy Huffman
maintainer:          jeremy@jeremyhuffman.com
copyright:           Jeremy Huffman
category:            Cloud Haskell
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/jeremyjh/distributed-process-zookeeper.git

library
  exposed-modules:     Control.Distributed.Process.Zookeeper
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.8
                     , hzk >= 2.1.0
                     , distributed-process
                     , network-transport
                     , network-transport-tcp 
                     , binary
                     , bytestring
                     , containers
                     , transformers >= 0.4
                     , mtl
                     , deepseq 
                     , network
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite spec
    build-depends:
        base,
        distributed-process-zookeeper -any,
        hspec >=2.0.2 && <2.1,
        distributed-process-monad-control,
        lifted-base,
        enclosed-exceptions,
        network,
        distributed-process,
        deepseq,
        monad-control,
        network-transport,
        network-transport-tcp,
        transformers,
        hzk,
        bytestring
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: test
    other-modules:
    ghc-options: -threaded -with-rtsopts=-N
